Fix bug with grow/shrink and wrong layout in the `ZeroAwareAllocator`
This fixes a bug where we could accidentally pass the wrong `Layout` to the
underlying allocator when growing or shrinking an allocation. When we have an
already-zeroed block of size N, we can satisfy allocations of size `M` where `M
< N` if we are willing to accept some fragmentation slop. We currently do this
but only when the slop is relatively small (1/8 the size of the allocation or
less). If we handed out such an allocation, and then the user wants to grow or
shrink it, then we would pass the user's layout to the underlying allocator,
rather than the original layout. Passing the wrong layout to an allocator is a
violation of the `Allocator` interface's safety contract, and could therefore
lead to UB. In fact, this was leading to assertion failures when paired with
`dlmalloc`.

This commit also sets up and enables fuzzing via libfuzzer with our existing
mutator and oracle; previously we were only using the mutator and oracle for
property-testing style tests. I forgot to do this originally and just stopped
after I had the property-tests working with the mutator and oracle.

--- a/crates/fuzzing/Cargo.toml
+++ b/crates/fuzzing/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
+bincode = { workspace = true }
 deallocate-zeroed = { path = "../..", features = ["allocator_api", "zero_aware_allocator"] }
-log = "0.4.22"
-mutatis = { version = "0.3.1", features = ["check", "derive"] }
+log = { workspace = true }
+mutatis = { workspace = true }
 
 [dev-dependencies]
-env_logger = "0.11.6"
+env_logger = { workspace = true }
