--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,14 @@
 members = [
   ".",
   "crates/fuzzing",
+  "fuzz",
 ]
+
+[workspace.dependencies]
+bincode = "2.0.1"
+env_logger = "0.11.6"
+log = "0.4.22"
+mutatis = { version = "0.3.1", features = ["check", "derive"] }
 
 [package]
 authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
