--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,7 @@ jobs:
     - run: rustup update
     - run: rustup component add rustfmt
     - run: cargo fmt --all --check
+
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -38,3 +39,14 @@ jobs:
     - run: rustup toolchain install ${{ matrix.rust_channel }}
     - run: rustup default ${{ matrix.rust_channel }}
     - run: cargo test --verbose ${{ matrix.features }}
+
+  fuzz:
+    runs-on: ubtuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - run: rustup toolchain install nightly
+    - run: rustup default nightly
+    - run: cargo install cargo-fuzz
+    - run: cargo fuzz build ops --sanitizer none
+    # Smoke test: run the fuzzer for 3 minutes.
+    - run: cargo fuzz run ops --sanitizer none -- -timeout=180
