--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - run: cargo fmt --all --check
 
   fuzz:
-    runs-on: ubtuntu-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - run: rustup toolchain install nightly
