--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,7 +27,7 @@ jobs:
     - run: cargo install cargo-fuzz
     - run: cargo fuzz build ops --sanitizer none
     # Smoke test: run the fuzzer for 3 minutes.
-    - run: cargo fuzz run ops --sanitizer none -- -timeout=180
+    - run: cargo fuzz run ops -- -timeout=180
 
   build:
     runs-on: ubuntu-latest
