--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - run: rustup toolchain install nightly
+    - run: rustup default nightly
     - run: cargo test -p deallocate-zeroed-fuzzing
 
   build:
