--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,13 +20,23 @@ jobs:
 
   fuzz:
     runs-on: ubuntu-latest
+    env:
+      CARGO_FUZZ_VERSION: 0.12.0
     steps:
     - uses: actions/checkout@v4
     - run: rustup toolchain install nightly
     - run: rustup default nightly
-    - run: cargo install cargo-fuzz
-    - run: cargo fuzz build ops --sanitizer none
+
+    # Install and cache `cargo-fuzz`.
+    - uses: actions/cache@v4
+      with:
+        path: ${{ runner.tool_cache }}/cargo-fuzz
+        key: cargo-fuzz-bin-${{ env.CARGO_FUZZ_VERSION }}
+    - run: echo "${{ runner.tool_cache }}/cargo-fuzz/bin" >> $GITHUB_PATH
+    - run: cargo install --root "${{ runner.tool_cache }}/cargo-fuzz" --version ${{ env.CARGO_FUZZ_VERSION }} cargo-fuzz --locked
+
     # Smoke test: run the fuzzer for 3 minutes.
+    - run: cargo fuzz build ops
     - run: cargo fuzz run ops -- -timeout=180
 
   fuzzing_crate:
